public/css/main.css
/* ... */
body.darkBG .page-item.disabled .page-link {
  border-color: transparent;
  background-color: #565656;
}
body.darkBG .json-block {
  color: #fdfdfd;
}
body.darkBG .top-search {
 color: #7fbdff;
}
body.darkBG .top-nav input:-webkit-autofill {
  -webkit-animation-name: autofillDark;
  -webkit-animation-fill-mode: both;
}
body.darkBG .navbar-fixed-bottom .nav-item {
  color: #dcdcdc;
}
body.darkBG #menuToggle .patty {
  background: #fdfdfd;
}
body.darkBG #menuToggle input:checked ~ .patty {
  background: #fbfbfb;
}
body.darkBG #hamburger-menu a {
  color: #fbfbfb;
}
body.darkBG #hamburger-menu a:hover {
  color: #94ffca;
}
body.darkBG #menu {
  background:  #2a2a2a;
  box-shadow: 0px 0px 0px 1px #ffffff33;
}
body.darkBG .progress {
  background-color: #757575;
}
.darkBG select,
.darkBG input[type=number] {
  color: #fff !important;
  background: #2a2a2a !important;
  border-color: #191919 !important;
}
.darkBG .nav-pills .nav-link.active {
  background-color: #2DD8A3;
  color: black;
}

.flash {
  animation-duration: .4s;
  animation-name: flashBg;
  animation-timing-function: cubic-bezier(0.22, 0.61, 0.36, 1);
}
@keyframes flashBg {
  0% { background: transparent }
  100% { background: #afafaf14 }
  0% { background: transparent }
}

/*utils*/
.jsonly {
  display: none;
}
.anchor {
  position: relative;
  top: -33px;
}
.clickable {
  cursor: pointer;
}
.hidden {
  display: none;
}
.nowrap {
  white-space: nowrap;
}
.break-word {
  word-wrap: break-word;
  word-break: break-all;
}
.color-inherit {
  color: inherit !important;
}
.fs11 {
  font-size: 11px !important;
}
.fs12 {
  font-size: 12px !important;
}
.fs13 {
  font-size: 13px !important;
}
.fs14 {
  font-size: 14px !important;
}
.fs15 {
  font-size: 15px !important;
}
.fs16 {
  font-size: 16px !important;
}
.fs18 {
  font-size: 18px !important;
}
.fs24 {
  font-size: 24px !important;
}
.fs28 {
  font-size: 28px !important;
}
.no-underline,
.no-underline:hover {
  text-decoration: none;
}
.trailing-zeroes {
  opacity: .3
}
.op70 {
  opacity: .7
}
.lh1rem {
  line-height: 1rem;
}
.h2rem {
  height: 2rem;
}
.h3rem {
  height: 3rem;
}
.w80 {
  width: 80px;
}
.w120 {
  width: 120px;
}
.w142 {
  width: 142px;
}
.vam {
  vertical-align: middle;
}
.p03rem0 {
  padding: .3rem 0;
}
.p10 {
  padding: 10px;
}

/*nav*/
.top-nav,
.navbar-fixed-bottom {
  position: fixed;
  background: #3B3F45;
  z-index: 1;
}
.top-nav {
  width: 100%;
  top: 0;
  background: #fff;
}
.navbar-fixed-bottom {
  bottom: 0;
  width: 100%;
  background: #fff;
  font-size: 14px;
  line-height: 22px;
}
.top-nav a {
  color: #052f4b;
}
.top-nav .dcricon-decred {
  font-size: 25px;
  top: 1px;
  position: relative;
}
.top-search {
  height: 30px;
  margin: 2px 0 2px 2px !important;
  border-top: 0px;
  border-left: 0px;
  border-right: 0px;
  border-radius: 0px;
  background: transparent !important;
}

#hamburger-menu {
  flex: 0 40px;
  z-index: 10;
  width: 100%;
  top: 0px;
  right: 0px;
  left: 0px;
}
#hamburger-menu a {
  display: block;
  padding: 0 20px;
  text-decoration: none;
  color: #232323;
  transition: color 0.3s ease;
}
#hamburger-menu a:hover {
  color: #2e75ff;
}
#menuToggle {
  display: block;
  z-index: 1;
  -webkit-user-select: none;
  user-select: none;
  position: relative;
}
#menuToggle input{
  display: block;
  width: 50px;
  height: 36px;
  position: absolute;
  top: -8px;
  left: -14px;
  cursor: pointer;
  opacity: 0;
  padding: 0px;
  z-index: 2;
  -webkit-touch-callout: none;
}
#menuToggle .patty {
  display: block;
  width: 20px;
  height: 2px;
  top: 2px;
  margin-bottom: 4px;
  position: relative;
  background: #052f4b;
  border-radius: 3px;
  z-index: 1;
  transform-origin: top right;
  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
              width .3s,
              opacity 0.55s ease;
}
#menuToggle .patty.short {
  width: 14px;
}
#menuToggle .patty :first-child {
  transform-origin: top right;
}
#menuToggle .patty :nth-last-child(2) {
  transform-origin: bottom right;
}
#menuToggle input:checked ~ .patty  {
  opacity: 1;
  background: #232323;
  transform: rotate(-45deg) translate(0px, -2px)  scale(1.1, 1.1);
}
#menuToggle input:checked ~ .patty.short {
  width: 20px;
}
#menuToggle input:checked ~ span:nth-last-child(3) {
  transform: rotate(0deg) scale(0, 0);
}
#menuToggle input:checked ~ .patty:nth-last-child(2) {
  transform: rotate(45deg) translate(2px, 1px) scale(1.1, 1.1);
}
#menu {
  position: absolute;
  width: 273px;
  margin: -34px 0 0 -243px;
  padding: 20px 0px;
  padding-top: 42px;
  background: #fff;
  list-style-type: none;
  -webkit-font-smoothing: antialiased;
  transform-origin: 0% 0%;
  transform: translate(0, -100%);
  transition: transform 0.33s cubic-bezier(0.77,0.2,0.05,1.0);
  box-shadow: 0px 0px 0px 1px #0000001a;
}
#menu a {
  display: block;
  padding: 7px 20px;
  margin: 1px 0;
  font-size: 20px;
}
#menuToggle input:checked ~ #menu {
  transform: none;
}

@-webkit-keyframes autofill {
  to {
    background: transparent;
  }
}
.top-nav input:-webkit-autofill {
  -webkit-animation-name: autofill;
  -webkit-animation-fill-mode: both;
}
@-webkit-keyframes autofillDark {
  to {
      color: #7fbdff;
      background: transparent;
  }
}


.navbar-fixed-bottom {
  position: fixed;
  bottom: 0;
  width: 100%;
}
.navbar-fixed-bottom .nav-item {
  color: #3c4044;
  padding: 0 6px;
  position: relative;
}

#watermark
{
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%) rotate(-15deg);
  position:fixed;
  opacity:0.016;
  z-index:-99;
  font-size: 480px;
  font-family: 'arial';
  color: gray;
}

/*pagination*/
#pagesize {
  flex: 0 60px;
}

/*table*/
.table-centered-1rem td {
  line-height: 1rem;
  vertical-align: middle;
}
.table th {
  font-size: 13px;
  font-weight: 500;
}
.table td {
  font-size: 14px;
  vertical-align: middle;
}
.table tr {
  border-bottom: 1px solid #e4e4e4;
}
.table thead th {
  border-bottom: none;
}
/* ... */

